--- a/tasks/package.yml
+++ b/tasks/package.yml
@@ -15,6 +15,10 @@
     package: "{{ package_enriched }}"
     pdf_doc_packages: "{{ [] if gh_pages_response.status == 200 else [ package ] }}"
 
+- import_tasks: tasks/GitHubPages.yml
+  vars:
+    package: "{{ package_enriched }}"
+
 - import_tasks: tasks/package_common.yml
   vars:
     package: "{{ package_enriched }}"
