--- a/site.yml
+++ b/site.yml
@@ -320,6 +320,30 @@
         ci_ubuntu_additional_apt_packages:
           - texlive-fonts-extra
 
+- name: CategoryConstructor
+  hosts: CategoryConstructor
+  connection: local
+  vars:
+    pkg_dir: "~/.gap/pkg/"
+  tasks:
+    - import_tasks: tasks/package.yml
+      vars:
+        package:
+          name: CategoryConstructor
+          description: "Construct categories out of given ones"
+          has_HOMALG_IO: true
+          doc_additional_latex_preamble: |
+            \usepackage{mathtools}
+          tests_only_basic: true
+        ci_additional_packages_to_clone:
+          - homalg_project
+          - CAP_project
+          - WrapperCategories
+        ci_additional_packages_to_test:
+          - WrapperCategories
+        ci_ubuntu_additional_apt_packages:
+          - texlive-fonts-extra
+
 - name: FinSetsForCAP
   hosts: FinSetsForCAP
   connection: local
