--- a/tasks/package.yml
+++ b/tasks/package.yml
@@ -14,6 +14,7 @@
   vars:
     package: "{{ package_enriched }}"
     pdf_doc_packages: "{{ [] if gh_pages_response.status == 200 else [ package ] }}"
+    ci_additional_repositories_enriched: "{{ (package.needed_other_repositories | default([])) + (ci_additional_repositories | default([])) }}"
 
 - import_tasks: tasks/GitHubPages.yml
   vars:
