--- a/tasks/homalg-project.github.io_package.yml
+++ b/tasks/homalg-project.github.io_package.yml
@@ -9,7 +9,7 @@
       
       | Build Status | Code Coverage |
       | ------------ | ------------- |
-      | [![Build Status](https://github.com/homalg-project/{{ meta_package.name }}/workflows/Tests/badge.svg)](https://github.com/homalg-project/{{ meta_package.name }}/actions?query=workflow%3ATests) | {# -#}
+      | [![Build Status](https://github.com/homalg-project/{{ meta_package.name }}/workflows/Tests/badge.svg?branch=master)](https://github.com/homalg-project/{{ meta_package.name }}/actions?query=workflow%3ATests) | {# -#}
         [![Code Coverage](https://codecov.io/gh/homalg-project/{{ meta_package.name }}/branch/master/graph/badge.svg)](https://codecov.io/gh/homalg-project/{{ meta_package.name }}) |
       
     marker: "<!-- {mark} {{ meta_package.name }} HEADER -->"
