Use reference style links

--- a/tasks/homalg-project.github.io_package.yml
+++ b/tasks/homalg-project.github.io_package.yml
@@ -9,9 +9,15 @@
       
       | Build Status | Code Coverage |
       | ------------ | ------------- |
-      | [![Build Status](https://github.com/homalg-project/{{ meta_package.name }}/workflows/Tests/badge.svg?branch=master)](https://github.com/homalg-project/{{ meta_package.name }}/actions?query=workflow%3ATests) | {# -#}
-        [![Code Coverage](https://codecov.io/gh/homalg-project/{{ meta_package.name }}/branch/master/graph/badge.svg)](https://codecov.io/gh/homalg-project/{{ meta_package.name }}) |
+      | [![Build Status][tests-{{ meta_package.name }}-img]][tests-{{ meta_package.name }}-url] | {# -#}
+        [![Code Coverage][codecov-{{ meta_package.name }}-img]][codecov-{{ meta_package.name }}-url] |
       
+      [tests-{{ meta_package.name }}-img]: https://github.com/homalg-project/{{ meta_package.name }}/workflows/Tests/badge.svg?branch=master
+      [tests-{{ meta_package.name }}-url]: https://github.com/homalg-project/{{ meta_package.name }}/actions?query=workflow%3ATests
+
+      [codecov-{{ meta_package.name }}-img]: https://codecov.io/gh/homalg-project/{{ meta_package.name }}/branch/master/graph/badge.svg
+      [codecov-{{ meta_package.name }}-url]: https://codecov.io/gh/homalg-project/{{ meta_package.name }}
+
     marker: "<!-- {mark} {{ meta_package.name }} HEADER -->"
 
 - name: Include table for subpackages
