Only show workflows of master

--- a/tasks/homalg-project.github.io_package.yml
+++ b/tasks/homalg-project.github.io_package.yml
@@ -13,7 +13,7 @@
         [![Code Coverage][codecov-{{ meta_package.name }}-img]][codecov-{{ meta_package.name }}-url] |
       
       [tests-{{ meta_package.name }}-img]: https://github.com/homalg-project/{{ meta_package.name }}/workflows/Tests/badge.svg?branch=master
-      [tests-{{ meta_package.name }}-url]: https://github.com/homalg-project/{{ meta_package.name }}/actions?query=workflow%3ATests
+      [tests-{{ meta_package.name }}-url]: https://github.com/homalg-project/{{ meta_package.name }}/actions?query=workflow%3ATests+branch%3Amaster
 
       [codecov-{{ meta_package.name }}-img]: https://codecov.io/gh/homalg-project/{{ meta_package.name }}/branch/master/graph/badge.svg
       [codecov-{{ meta_package.name }}-url]: https://codecov.io/gh/homalg-project/{{ meta_package.name }}
