--- a/tasks/homalg-project.github.io_used_by_table.yml
+++ b/tasks/homalg-project.github.io_used_by_table.yml
@@ -43,6 +43,6 @@
 
 - name: Create depending package table
   blockinfile:
-    path: "{{ pkg_dir }}/index.md"
+    path: "{{ pkg_dir }}/website/_docs/{{ meta_package.name }}-based/index.md"
     marker: "<!-- {mark} {{ meta_package.name }} USED_BY -->"
     block: "{{ lookup('template', 'templates/homalg-project.github.io_used_by_table.j2') }}"
