--- a/tasks/homalg-project.github.io_used_by_table.yml
+++ b/tasks/homalg-project.github.io_used_by_table.yml
@@ -35,7 +35,7 @@
 
 - name: Set packages_enriched
   set_fact:
-    packages_enriched: "{{ packages_enriched + [ zipped[0] | combine( { 'description': zipped[1].content | regex_search('Subtitle := \"[^\"]*') | replace('Subtitle := \"', ''), 'status': zipped[1].content | regex_search('Status := \"[^\"]*') | replace('Status := \"', ''), 'has_html_docu': zipped[2].status == 200, 'has_pdf_docu': zipped[3].status == 200 } ) ] }}"
+    packages_enriched: "{{ packages_enriched + [ zipped[0] | combine( { 'description': zipped[1].content | regex_search('Subtitle := \"[^\"]*') | replace('Subtitle := \"', ''), 'status': zipped[1].content | regex_search('\nStatus := \"[^\"]*') | replace('\nStatus := \"', ''), 'has_html_docu': zipped[2].status == 200, 'has_pdf_docu': zipped[3].status == 200 } ) ] }}"
   loop: "{{ packages | zip(PackageInfo_responses.results, HTML_responses.results, PDF_responses.results) | list }}"
   loop_control:
     loop_var: zipped
