--- a/tasks/package.yml
+++ b/tasks/package.yml
@@ -15,6 +15,7 @@
     package: "{{ package_enriched }}"
     pdf_doc_packages: "{{ [] if gh_pages_response.status == 200 else [ package ] }}"
     ci_additional_repositories_enriched: "{{ (package.needed_other_repositories | default([])) + (ci_additional_repositories | default([])) }}"
+    is_meta_package: false
 
 - import_tasks: tasks/GitHubPages.yml
   vars:
