--- a/tasks/gh-pages_package.yml
+++ b/tasks/gh-pages_package.yml
@@ -1,2 +1,32 @@
 ---
+- name: download_pdf.html
+  template:
+    src: redirect.html.j2
+    dest: "{{ pkg_dir }}/{{ package.name }}/gh-pages/download_pdf.html"
+  vars:
+    url: "{% raw %}{{ site.data.package.pdf }}{% endraw %}"
 
+- name: view_release.html
+  template:
+    src: redirect.html.j2
+    dest: "{{ pkg_dir }}/{{ package.name }}/gh-pages/view_release.html"
+  vars:
+    url: "https://github.com/homalg-project/{{ package.name }}/releases/tag/v{% raw %}{{ site.data.package.version }}{% endraw %}"
+
+- name: badge_version.json
+  template:
+    src: badge.json.j2
+    dest: "{{ pkg_dir }}/{{ package.name }}/gh-pages/badge_version.json"
+  vars:
+    label: "version"
+    message: "{% raw %}{{ site.data.package.version }}{% endraw %}"
+    color: "orange"
+
+- name: badge_date.json
+  template:
+    src: badge.json.j2
+    dest: "{{ pkg_dir }}/{{ package.name }}/gh-pages/badge_date.json"
+  vars:
+    label: "released on"
+    message: "{% raw %}{{ site.data.package.date }}{% endraw %}"
+    color: "orange"
