--- a/tasks/package_common.yml
+++ b/tasks/package_common.yml
@@ -53,6 +53,13 @@
         ArchiveURL      := Concatenation( "https://github.com/homalg-project/{{ package.name }}/releases/download/v", ~.Version, "/{{ package.name }}-", ~.Version ),
       {% endif %}
 
+- name: PackageInfo.g ArchiveFormats
+  lineinfile:
+    path: "{{ pkg_dir }}/{{ package.path }}/PackageInfo.g"
+    regexp: "ArchiveFormats :="
+    line: 'ArchiveFormats := ".tar.gz .zip",'
+  when: not package.docu_only
+
 - name: PackageInfo.g PackageDoc.BookName
   lineinfile:
     path: "{{ pkg_dir }}/{{ package.path }}/PackageInfo.g"
