--- a/site.yml
+++ b/site.yml
@@ -186,15 +186,16 @@
           has_HOMALG_IO: true
           doc_additional_latex_preamble: |
             \usepackage{mathtools}
+          needed_other_repositories:
+            - homalg_project
+            - CAP_project
+            - Toposes
+            - CategoryConstructor
           tests_additional_packages_to_load:
             - SubcategoriesForCAP
             - LazyCategories
           tests_only_basic: true
         ci_additional_repositories:
-          - homalg_project
-          - CAP_project
-          - Toposes
-          - CategoryConstructor
           - SubcategoriesForCAP
           - ZariskiFrames
           - LazyCategories
