All subpackages now have a stable HTML and PDF documentation

--- a/tasks/homalg-project.github.io_subpackage_table.yml
+++ b/tasks/homalg-project.github.io_subpackage_table.yml
@@ -9,34 +9,14 @@
   loop_control:
     loop_var: package
 
-- name: Check if HTML docu is available
-  uri:
-    url: https://homalg-project.github.io/{{ meta_package.name }}/{{ package.name }}/doc/chap0_mj.html
-  register: HTML_responses
-  failed_when: HTML_responses.status is not defined
-  check_mode: no
-  loop: "{{ packages }}"
-  loop_control:
-    loop_var: package
-
-- name: Check if PDF docu is available
-  uri:
-    url: https://raw.githubusercontent.com/homalg-project/{{ meta_package.name }}/doc/{{ package.name }}.pdf
-  register: PDF_responses
-  failed_when: PDF_responses.status is not defined
-  check_mode: no
-  loop: "{{ packages }}"
-  loop_control:
-    loop_var: package
-
 - name: Initialize packages_enriched
   set_fact:
     packages_enriched: "{{ [] }}"
 
 - name: Set packages_enriched
   set_fact:
-    packages_enriched: "{{ packages_enriched + [ zipped[0] | combine( { 'description': zipped[1].content | regex_search('Subtitle := \"[^\"]*') | replace('Subtitle := \"', ''), 'status': zipped[1].content | regex_search('\nStatus := \"[^\"]*') | replace('\nStatus := \"', ''), 'has_html_docu': zipped[2].status == 200, 'has_pdf_docu': zipped[3].status == 200 } ) ] }}"
-  loop: "{{ packages | zip(PackageInfo_responses.results, HTML_responses.results, PDF_responses.results) | list }}"
+    packages_enriched: "{{ packages_enriched + [ zipped[0] | combine( { 'description': zipped[1].content | regex_search('Subtitle := \"[^\"]*') | replace('Subtitle := \"', ''), 'status': zipped[1].content | regex_search('\nStatus := \"[^\"]*') | replace('\nStatus := \"', '') } ) ] }}"
+  loop: "{{ packages | zip(PackageInfo_responses.results) | list }}"
   loop_control:
     loop_var: zipped
   no_log: true
